# mcp_twojtenis_pl

./: .env.example  .gitignore  AUTH0_SPEC.md  CLAUDE.md  README.md  auth_architecture.md  debug_parser.py  delete_reservation.txt  get_club_schedule.txt  get_clubs.txt  get_reservations.txt  implementation_plan.md  keep_logged.txt  login.txt  parse_schedule.py  project_summary.md  prompt.md  put_reservation.txt  pyproject.toml  shchedule.json  sport_ids.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-publish.yml
config/: clubs copy.json  clubs.json  config.example.json  sports.json
src/twojtenis_mcp/: __init__.py  __main__.py  auth.py  availability.py  client.py  combined_server.py  config.py  jwt_utils.py  locations.py  models.py  oauth_browser.py  oauth_client.py  router.py  schedule_parser.py  server.py  sse_server.py  tech_group.py  utils.py
tests/: __init__.py  conftest.py  debug_auth.py  debug_html_parse.py  debug_parser.py  debug_reservation_parse.py  debug_reservations_parse.py  test_availability.py  test_bulk_reservation.py  test_client_bearer.py  test_delete_all_reservations.py  test_endpoints_clubs_v2.py  test_endpoints_reservations_v2.py  test_endpoints_schedules_v2.py  test_integration.py  test_jwt_utils.py  test_locations.py  test_models.py  test_oauth.py  test_schedule_parser.py  test_tech_group.py  test_translate_availability.py  test_utils.py
tests/data/: badm_021125.json  blonia_sport.html  reservation.html  reservations.html  test_input_1.json  test_input_2.json  (+2 more)
(+6 files in other folders)
