[project]
name = "twojtenis-mcp"
version = "0.1.4"
description = "MCP server for booking badminton and tennis courts via twojtenis.pl"
authors = [{ name = "Sergei Vedishchev", email = "brainboost@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sse-starlette>=1.6.0",
    "brotli>=1.1.0",
    "asyncio>=4.0.0",
]

[project.scripts]
twojtenis-mcp = "twojtenis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pytest>=8.0.0",
    "anyio>=4.11.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]
